[package]
name = "rusty-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.6.0", features = ["attributes"] }